updating swagger docs and exception handling
