# src/controllers/task.js
@@ -9,14 +9,14 @@ export async function createTableTask() {
     })
 }
 
-export async function selectTasks(req, res) {
-        const token = req.headers['x-acess-token']
-        const decoded = jwt.decode(token, SECRET);
-        const userId = decoded.userId;
-        const db = await openDb()
+export async function selectTasks(req, res) { //documentado
+    const token = req.headers['x-acess-token']
+    const decoded = jwt.decode(token, SECRET);
+    const userId = decoded.userId;
+    const db = await openDb()
 
-        db.all('SELECT * FROM task WHERE email_id=?', [userId])
-            .then(tasks => res.json(tasks))
+    db.all('SELECT * FROM task WHERE email_id=?', [userId])
+        .then(tasks => res.json(tasks))
 }
 
 export async function selectTask(req, res) {
@@ -27,42 +27,101 @@ export async function selectTask(req, res) {
     })
 }
 
-export async function insertTask(req, res) {
+export async function insertTask(req, res) { //documentado
     let task = req.body
-    await openDb().then(db => {
-        db.run('INSERT INTO task (description, email_id) VALUES (?,?)', [task.description, task.email_id])
-    })
-    res.status(200).json({
-        "msg": "Tarefa criado com sucesso!"
-    })
-}
+    try {
+        const token = req.headers['x-acess-token']
+        const decoded = jwt.decode(token, SECRET)
+        const userId = decoded.userId
+        const db = await openDb()
+        try {
+            await db.run('INSERT INTO task (description, email_id) VALUES (?,?)', [task.description, userId])
 
-export async function updateUser(req, res) {
-    let user = req.body
-    await openDb().then(db => {
-        db.run('UPDATE user SET password=? WHERE email=?', [user.password, user.email])
-    })
-    res.status(200).json({
-        "msg": "Senha alterada com sucesso!"
-    })
+            res.status(200).json({
+                message: "Tarefa registrada com sucesso."
+            })
+        } catch (error) {
+            res.status(500).json({
+                message: "Erro interno do servidor.",
+                error: error.message
+            })
+        }
+    } catch (error) {
+        res.status(500).json({
+            message: "Erro interno do servidor.",
+            error: error.message
+        })
+    }
 }
 
 export async function updateTask(req, res) {
     let task = req.body
-    await openDb().then(db => {
-        db.run('UPDATE task SET description=? WHERE id=?', [task.description, task.id])
-    })
-    res.status(200).json(res.task, {
-        "msg": "Tarefa alterada com sucesso!"
-    })
+    try {
+        const token = req.headers['x-acess-token']
+        const decoded = jwt.decode(token, SECRET)
+        const userId = decoded.userId
+        const db = await openDb()
+        try {
+            await db.get('SELECT * FROM task WHERE id=? AND email_id=?', [task.id, userId])
+                .then(selectReturn => {
+                    if (selectReturn.id === task.id) {
+                        db.run('UPDATE task SET description=? WHERE id=?', task.description, task.id)
+                        res.status(200).json({
+                            message: "Tarefa editada com sucesso."
+                        })
+                    } else {
+                        res.status(500).json({
+                            message: "Erro interno do servidor.",
+                            error: error.message
+                        })
+                    }
+                })
+        } catch (error) {
+            res.status(500).json({
+                message: "Erro interno do servidor.",
+                error: error.message
+            })
+        }
+    } catch (error) {
+        res.status(500).json({
+            message: "Erro interno do servidor.",
+            error: error.message
+        })
+    }
 }
 
 export async function deleteTask(req, res) {
-    let id = req.body.id
-    await openDb().then(db => {
-        db.get('DELETE FROM task WHERE id=?', [id])
-    })
-    res.status(200).json({
-        "msg": "Tarefa excluída com sucesso!"
-    })
+    let task = req.body
+    try {
+        const token = req.headers['x-acess-token']
+        const decoded = jwt.decode(token, SECRET)
+        const userId = decoded.userId
+        const db = await openDb()
+        try {
+            await db.get('SELECT * FROM task WHERE id=? AND email_id=?', [task.id, userId])
+                .then(selectReturn => {
+                    if (selectReturn.id === task.id) {
+                        db.get('DELETE FROM task WHERE id=?', [task.id])
+                        res.status(200).json({
+                            message: "Tarefa deletada com sucesso."
+                        })
+                    } else {
+                        res.status(500).json({
+                            message: "Erro interno do servidor.",
+                            error: error.message
+                        })
+                    }
+                })
+        } catch (error) {
+            res.status(500).json({
+                message: "Erro interno do servidor.",
+                error: error.message
+            })
+        }
+    } catch (error) {
+        res.status(500).json({
+            message: "Erro interno do servidor.",
+            error: error.message
+        })
+    }
 }
